Fix Taxonomy overflow

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -9,6 +9,7 @@
   top: 1rem;
   // hack for flex to prevent text block from glowing enormously
   min-width: 0;
+  z-index: 1;
 }
 
 .editor {
